Don’t try to reposition tooltip, as they sometimes are too tall. We could conditionally do it depending on the height of the element, but it’s too much work for the old heatmap. [Fixes #138825479]

--- a/gxa/src/main/javascript/atlas_modules/contrast-tooltips/src/gxaContrastTooltip.css
+++ b/gxa/src/main/javascript/atlas_modules/contrast-tooltips/src/gxaContrastTooltip.css
@@ -1,6 +1,5 @@
 .gxaContrastTooltip {
     position: relative;
-    bottom: -200px;
     border: solid transparent;
     color: darkslategray;
     padding: 2px;
